2011-08-02 Javier Lanz <javier.lanz@artica.es>

	* images/skin/skin_default/include/styles/pandora.css: Removed old
	links to non-existing images

2011-08-02 Javier Lanz <javier.lanz@artica.es>

	* extensions/agents_modules.php: Changed background color of the text
	in the table header.

	Fixes: 3373927

2011-07-29  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Change the events free search tag
	by a combo with all the possible tags for 3380040

2011-07-29  Sergio Martin <sergio.martin@artica.es>

	* operation/servers/view_server_detail.php: Changed the progress graph
	mode to show the percent text and not only graph. For bug 3379759

2011-07-29 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/groups/group_list.php: Fixed a bug that allow
	to delete all agent groups and makes pandora unstable. 

2011-07-29 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/modules/manage_network_templates_form.php: Fixed
	a bug with allows to create a module template without a
	name.

	Fixes: 3371381

2011-07-29 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_agents.php: Fixed a bug related to
	wrong value for a foreach function.

	Fixes: 3371341

2011-07-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php: Added new mode to 
	get networkmap function to allow get the map of another user

2011-07-28  Ramon Novoa  <rnovoa@artica.es>

	* operation/events/events_list.php: Changed the event pagination query
	  (was too slow).

2011-07-28  Sergio Martin <sergio.martin@artica.es>

	* include/config_process.php
	include/functions.php
	operation/agentes/stat_win.php
	general/pandora_help.php: Create new functions to manage pandora
	languages.
	Fix pandora_help languages to use the user language, no always the
	global language.
	Fix som SESSION index little bugs

2011-07-27  Ramon Novoa  <rnovoa@artica.es>

	* operation/events/events_list.php: Hide agent details unless we have
	  a valid agent id.
